--- a/portfolio.html
+++ b/portfolio.html
@@ -148,9 +148,9 @@
       </div>
       <div class="col-sm-6">
         <ul class="nav-menu">
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>          
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="team.html">Team</a></li>          
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         
       </div>
